--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activity.MainActivity"
+    >
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/tv_flexbox_layout"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:background="@android:color/holo_green_light"
+      android:onClick="onClick"
+      android:padding="10dp"
+      android:shadowRadius="0.3"
+      android:text="FlexboxLayout"
+      android:textAlignment="center"
+      android:textColor="@android:color/white"
+      android:textSize="16sp"
+      app:layout_constraintBottom_toTopOf="@id/tv_flexbox_layout_manager"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_chainStyle="packed"
+      />
+
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/tv_flexbox_layout_manager"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="20dp"
+      android:background="@android:color/holo_orange_dark"
+      android:onClick="onClick"
+      android:padding="10dp"
+      android:shadowRadius="0.3"
+      android:text="FlexboxLayoutManager(within RecyclerView)\nGrid View"
+      android:textAlignment="center"
+      android:textColor="@android:color/white"
+      android:textSize="16sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/tv_flexbox_layout"
+      />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
